duck/test/fail/ambiguous_delay.duck
import base

f :: delay Int -> Int -> Int
f _ y = y

f :: Int -> Char -> Char
f _ y = y

_ = f 0
_ = f '0'
